@@ -2065,8 +2065,7 @@ if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_SDK_DIR)/bin/java ] ; then \
 	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xaarch32" ; then \
+	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
@@ -2115,8 +2114,7 @@ if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_DEBUG_SDK_DIR)/bin/java ] ; then \
 	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xaarch32" ; then \
+	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_DEBUG_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
@@ -2248,8 +2246,7 @@ if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_BOOT_SDK_DIR)/bin/java ] ; then \
 	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" -a \
-	  "x$(INSTALL_ARCH_DIR)" != "xaarch32" ; then \
+	  "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_BOOT_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
