@@ -1,5 +1,15 @@
 2017-07-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
+	PR3391: Revert PR3385 as -Xshare:dump does appear
+	to work on AArch32
+	* Makefile.am:
+	(add-archive): Don't exclude aarch32.
+	(add-archive-debug): Likewise.
+	(add-archive-boot): Likewise.
+	* NEWS: Updated.
+
+2017-07-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
 	Bump shenandoah to aarch64-shenandoah-jdk8u141-b16.
 	* patches/hotspot/shenandoah/6515172-pr3346.patch,
 	* patches/hotspot/shenandoah/7009641-pr3423.patch,
